// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peers can be created/edited/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createPeer": Object {
      "hostURL": "https://host-url.ch/",
      "id": Any<String>,
      "isDisabled": false,
      "name": "Create Peer Test",
      "slug": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be deleted 1`] = `
Object {
  "data": Object {
    "deletePeer": Any<Object>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be read by id 1`] = `
Object {
  "data": Object {
    "peer": Object {
      "hostURL": "https://host-url.ch/",
      "id": Any<String>,
      "isDisabled": false,
      "name": "Create Peer Test",
      "slug": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be updated 1`] = `
Object {
  "data": Object {
    "updatePeer": Object {
      "hostURL": "https://new-host-url.ch/",
      "id": Any<String>,
      "isDisabled": false,
      "name": "Updated Peer",
      "slug": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can read peer profile 1`] = `
Object {
  "data": Object {
    "peerProfile": Object {
      "callToActionImage": null,
      "callToActionImageURL": "",
      "callToActionText": Array [],
      "callToActionURL": "",
      "hostURL": "https://fakeURL",
      "logo": null,
      "name": "",
      "themeColor": "#000000",
      "themeFontColor": "#ffffff",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can update peer profile 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: 
Invalid \`peerProfile.create()\` invocation in
/Users/itrulia/Documents/wepublish/libs/api/src/lib/graphql/peer-profile/peer-profile.private-mutation.ts:25:25

  22     },
  23     data: input
  24   })
→ 25 : await peerProfile.create(
  Foreign key constraint failed on the field: \`peerProfiles_logoID_fkey (index)\`],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
